--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
         <columns>
             <ul>
                 <li>
-                    <a href="initation.html">initation.html</a>
+                    <a href="new-feature.html">new-feature.html</a>
                 </li>
             </ul>
         </columns>
