--- a/src/pages/new-feature.html
+++ b/src/pages/new-feature.html
@@ -1,7 +1,10 @@
+---
+description: "New product available!"
+---
 <container style="box-shadow: 0px 0px 33px rgba(0, 0, 0, 0.1);">
     <wrapper>
         <center>
-            <img src="https://i.ibb.co/SfNPL25/banner.png" alt="New product available!" width="600" style="width: 600px">
+            <img src="https://www.invibes.com/resources/images/newsletter/banner.png" alt="New product available!" width="600" style="width: 600px">
         </center>
     </wrapper>
 
@@ -20,15 +23,15 @@
                 <tr>
                     <td>
                         <center>
-                            <img src="https://i.ibb.co/T8FyDQ6/jumbo-1.png" alt="primary days deals are comming"  width="600" style="width: 600px">
+                            <img src="https://www.invibes.com/resources/images/newsletter/jumbo.png" alt="primary days deals are comming"  width="512" style="width: 512px">
                         </center>
                     </td>
                 </tr>
             </table>
             <table>
                 <tr>
-                    <td style="padding-bottom: 37px">
-                        Showcase not one, not two, but a whole collection of videos with Invibes Stories V.
+                    <td style="padding-bottom: 37px;padding-top: 20px">
+                        Showcase not one, not two, but a whole collection of videos with <br> Invibes Stories V.
                         <br><br>
                         This horizontal video gallery not only captures attention with an auto-play video,
                         it then captivates users further with previews of videos to come
@@ -39,7 +42,7 @@
             <table style="width: 250px">
                 <tr>
                     <td style="padding-top: 10px;padding-bottom: 10px;padding-left: 30px;padding-right: 30px;background-color: #FF5200;text-align: center;">
-                        <a href="#" target="_blank" style="text-align: center;color: #fff;font-size: 16px" rel="noopener">
+                        <a href="https://demo.invibes.com/2021/cosmopolitan_com_fashion.html?BVID=402422" target="_blank" style="text-align: center;color: #fff;font-size: 16px" rel="noopener">
                             <b>
                                 Demo Invibes Stories V
                             </b>
